--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "cypress": "^13.6.3"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
+    "faker": "^6.6.6"
   }
 }
